--- a/code/Properties/launchSettings.json
+++ b/code/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "mingerp": {
+    "sbox-mingerp": {
       "commandName": "Executable",
       "executablePath": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\sbox\\sbox.exe",
       "commandLineArgs": "\u002Bdeveloper \u002Bsw -noassert -tools"
